# HAL

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
.travis/: install.sh
include/: SerialProtocol.h
src/arduino/: CMakeLists.txt
src/include/: HAL.h  SerialProtocol.h
src/unix/: CMakeLists.txt  HALUnix.h  UnixSerial.cpp  UnixSerial.h  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  example.cpp
test_package/arduino/: CMakeLists.txt
test_package/unix/: CMakeLists.txt  conanfile.py  example.cpp
tests/unix/: CMakeLists.txt
